Quorum/Library/Tests/TypeChecker/Pass/ExpAssignBooleanText.quorum
class Main
    action Main
        text t = ""
        boolean bool = false
        t = "true"
        bool = cast(boolean, t)
        if bool = true
            output "passed"
        end
    end
end