Quorum/Library/Tests/TypeChecker/Fail/ExpAssignBooleanTextObjField.quorum
class main
    Text t
    boolean bool = false
    action Main
        t:SetValue("text")
        bool = cast(boolean, t)
    end
end